--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-day-picker": "8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.54.1",
+    "react-hot-toast": "^2.5.2",
     "react-resizable-panels": "^2.1.7",
     "react-speech": "^1.0.2",
     "react-webcam": "^7.2.0",
